--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@ greet("${B1.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}")
     <h1>Practice for the APUSH timeline test :D</h1>
 
     <div class="card">
+      <img src="timeline1.png" alt="first timeline" width="300">
       <label for="A1">A</label>
       <input id="A1" placeholder="1, 2, 3, 4, or 5" />
       <label for="B1">B</label>
