--- a/index.html
+++ b/index.html
@@ -66,17 +66,17 @@ greet("${B1.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}")
     <h1>Practice for the APUSH timeline test :D</h1>
 
     <div class="card">
-      <img src="timeline1.png" alt="first timeline" width="300">
+      <img src="timeline1.png" alt="first timeline" width="300"><br>
       <label for="A1">A</label>
-      <input id="A1" placeholder="1, 2, 3, 4, or 5" />
+      <input id="A1" placeholder="1, 2, 3, 4, or 5" /><br>
       <label for="B1">B</label>
-      <input id="B1" placeholder="1, 2, 3, 4, or 5" />
+      <input id="B1" placeholder="1, 2, 3, 4, or 5" /><br>
       <label for="C1">C</label>
-      <input id="C1" placeholder="1, 2, 3, 4, or 5" />
+      <input id="C1" placeholder="1, 2, 3, 4, or 5" /><br>
       <label for="D1">D</label>
-      <input id="D1" placeholder="1, 2, 3, 4, or 5" />
+      <input id="D1" placeholder="1, 2, 3, 4, or 5" /><br>
       <label for="E1">E</label>
-      <input id="E1" placeholder="1, 2, 3, 4, or 5" />
+      <input id="E1" placeholder="1, 2, 3, 4, or 5" /><br>
       <button onclick="runScript()">Check Answer</button>
       <div id="out" style="margin-top: .8rem;">Output will appear here…</div>
     </div>
