--- a/index.html
+++ b/index.html
@@ -66,7 +66,12 @@ greet("${B1.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}")
     <h1>Practice for the APUSH timeline test :D</h1>
 
     <div class="card">
-      <img src="timeline1.png" alt="first timeline" width="300"><br>
+      <img src="timeline1.png" alt="first timeline" width="500"><br>
+      <p>1. The coming of the French and English</p><br>
+      <p>2. The Critical Period: from Confederation to Constitution</p><br>
+      <p>3. The Revolutionary Era</p><br>
+      <p>4. The coming of the Spanish</p><br>
+      <p>1. The colonial period</p><br>
       <label for="A1">A</label>
       <input id="A1" placeholder="1, 2, 3, 4, or 5" /><br>
       <label for="B1">B</label>
@@ -80,9 +85,5 @@ greet("${B1.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}")
       <button onclick="runScript()">Check Answer</button>
       <div id="out" style="margin-top: .8rem;">Output will appear here…</div>
     </div>
-
-    <footer>
-      <p><strong>Customize me:</strong> open <code>index.html</code> and edit the <code>code</code> string in the &lt;script&gt; to your prewritten Python.</p>
-    </footer>
   </body>
 </html>
