--- a/index.html
+++ b/index.html
@@ -67,11 +67,12 @@ checkAns("${A1.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${B1.replace(/\\/
 
     <div class="card">
       <img src="timeline1.png" alt="first timeline" width="500"><br>
-      <p>1. The coming of the French and English</p><br>
-      <p>2. The Critical Period: from Confederation to Constitution</p><br>
-      <p>3. The Revolutionary Era</p><br>
-      <p>4. The coming of the Spanish</p><br>
-      <p>1. The colonial period</p><br>
+      <p>1. The coming of the French and English\n
+        2. The Critical Period: from Confederation to Constitution\n
+        3. The Revolutionary Era\n
+        4. The coming of the Spanish\n
+        5. The colonial period
+      </p><br>
       <label for="A1">A</label>
       <input id="A1" placeholder="1, 2, 3, 4, or 5" /><br>
       <label for="B1">B</label>
