--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 def checkAns(a1: str, b1: str, c1: str, d1: str, e1: str) -> str:
     if(not (a1 or b1 or c1 or d1 or e1)):
         return "Please fill in all fields."
-    score = a1 == "4" + b1 == "1" + c1 == "5" + d1 == "3" + e1 == "2"
+    score = int(a1 == "4") + int(b1 == "1") + int(c1 == "5") + int(d1 == "3") + int(e1 == "2")
     return str(score) + "/5"
 
 checkAns("${A1.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${B1.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${C1.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${D1.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${E1.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}")
