--- a/index.html
+++ b/index.html
@@ -60,8 +60,16 @@ def checkAns(a1: str, b1: str, c1: str, d1: str, e1: str, ans) -> str:
     if(not (a1 and b1 and c1 and d1 and e1)):
         return "Please fill in all fields."
     score = 0
-    if(ans[int(a1)] == "The coming of the Spanish"):
-        score = 5
+    if(ans[int(a1)-1] == "The coming of the Spanish"):
+        score += 1
+    if(ans[int(b1)-1] == "The coming of the French and English"):
+        score += 1
+    if(ans[int(c1)-1] == "The colonial period"):
+        score += 1
+    if(ans[int(d1)-1] == "The Revolutionary Era"):
+        score += 1
+    if(ans[int(e1)-1] == "The Critical Period: from Confederation to Constitution"):
+        score += 1
     return str(score) + "/5"
 
 checkAns("${A1.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${B1.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${C1.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${D1.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${E1.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", ${JSON.stringify(ansChoices)})
@@ -110,7 +118,7 @@ checkAns("${A1.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${B1.replace(/\\/
       <label for="E1">E</label>
       <input id="E1" placeholder="1, 2, 3, 4, or 5" /><br>
       <button onclick="runScript()">Check Answer</button>
-      <div id="out" style="margin-top: .8rem;">Output will appear here…1</div>
+      <div id="out" style="margin-top: .8rem;">Output will appear here…2</div>
     </div>
   </body>
 </html>
