--- a/index.html
+++ b/index.html
@@ -111,6 +111,16 @@
           const H2 = document.getElementById("H2").value.trim();
           const I2 = document.getElementById("I2").value.trim();
           const J2 = document.getElementById("J2").value.trim();
+          const A3 = document.getElementById("A3").value.trim();
+          const B3 = document.getElementById("B3").value.trim();
+          const C3 = document.getElementById("C3").value.trim();
+          const D3 = document.getElementById("D3").value.trim();
+          const E3 = document.getElementById("E3").value.trim();
+          const F3 = document.getElementById("F3").value.trim();
+          const G3 = document.getElementById("G3").value.trim();
+          const H3 = document.getElementById("H3").value.trim();
+          const I3 = document.getElementById("I3").value.trim();
+          const J3 = document.getElementById("J3").value.trim();
 
           // ---------- Your prewritten Python goes here ----------
           const code = `
@@ -168,32 +178,40 @@ checkAns("${A1.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${B1.replace(/\\/
       <img src="timeline1.png" alt="first timeline" width="500"><br>
       <div id="choices"></div>
       <label for="A1">A</label>
-      <input id="A1" placeholder="1, 2, 3, 4, or 5" /><br>
+      <input id="A1" placeholder="1 to 5" /><br>
       <label for="B1">B</label>
-      <input id="B1" placeholder="1, 2, 3, 4, or 5" /><br>
+      <input id="B1" placeholder="1 to 5" /><br>
       <label for="C1">C</label>
-      <input id="C1" placeholder="1, 2, 3, 4, or 5" /><br>
+      <input id="C1" placeholder="1 to 5" /><br>
       <label for="D1">D</label>
-      <input id="D1" placeholder="1, 2, 3, 4, or 5" /><br>
+      <input id="D1" placeholder="1 to 5" /><br>
       <label for="E1">E</label>
-      <input id="E1" placeholder="1, 2, 3, 4, or 5" /><br>
+      <input id="E1" placeholder="1 to 5" /><br>
       <button onclick="runScript()">Check Answer</button>
       <div id="out" style="margin-top: .8rem;">Output will appear here…</div><br>
       <div id="choices2"></div>
-      <label for="A1">A</label>
-      <input id="A1" placeholder="1, 2, 3, 4, or 5" /><br>
-      <label for="B1">B</label>
-      <input id="B1" placeholder="1, 2, 3, 4, or 5" /><br>
-      <label for="C1">C</label>
-      <input id="C1" placeholder="1, 2, 3, 4, or 5" /><br>
-      <label for="D1">D</label>
-      <input id="D1" placeholder="1, 2, 3, 4, or 5" /><br>
-      <label for="E1">E</label>
-      <input id="E1" placeholder="1, 2, 3, 4, or 5" /><br>
-      <button onclick="runScript()">Check Answer</button>
-      <div id="out" style="margin-top: .8rem;">Output will appear here…</div><br>
+      <label for="A2">A</label>
+      <input id="A2" placeholder="1 to 10" /><br>
+      <label for="B2">B</label>
+      <input id="B2" placeholder="1 to 10" /><br>
+      <label for="C2">C</label>
+      <input id="C2" placeholder="1 to 10" /><br>
+      <label for="D2">D</label>
+      <input id="D2" placeholder="1 to 10" /><br>
+      <label for="E2">E</label>
+      <input id="E2" placeholder="1 to 10" /><br>
+      <label for="F2">A</label>
+      <input id="F2" placeholder="1 to 10" /><br>
+      <label for="G2">B</label>
+      <input id="G2" placeholder="1 to 10" /><br>
+      <label for="H2">C</label>
+      <input id="H2" placeholder="1 to 10" /><br>
+      <label for="I2">D</label>
+      <input id="I2" placeholder="1 to 10" /><br>
+      <label for="J2">E</label>
+      <input id="J2" placeholder="1 to 10" /><br>
       <div id="choices3"></div>
-      <p> ver 2</p>
+      <p> ver 1</p>
     </div>
   </body>
 </html>
