--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ def checkAns(a1: str, b1: str, c1: str, d1: str, e1: str, ans) -> str:
         score += 1
     if(ans[int(e1)-1] == "The Critical Period: from Confederation to Constitution"):
         score += 1
-    return str(score) + "/5, reload the page to redo"
+    return str(score) + "/5, reload the page to reshuffle"
 
 checkAns("${A1.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${B1.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${C1.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${D1.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${E1.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", ${JSON.stringify(ansChoices)})
 `;
@@ -152,6 +152,59 @@ checkAns("${A1.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${B1.replace(/\\/
           const H2 = document.getElementById("H2").value.trim();
           const I2 = document.getElementById("I2").value.trim();
           const J2 = document.getElementById("J2").value.trim();
+
+          // ---------- Your prewritten Python goes here ----------
+          const code = `
+def checkAns(a1: str, b1: str, c1: str, d1: str, e1: str, f1: str, g1: str, h1: str, i1: str, j1: str,ans) -> str:
+    if(not (a1 and b1 and c1 and d1 and e1 and f1 and g1 and h1 and i1 and j1)):
+        return "Please fill in all fields."
+    score = 0
+    if(ans[int(a1)-1] == "Jeffersonian Republicanism"):
+        score += 1
+    if(ans[int(b1)-1] == "Era of Good Feelings"):
+        score += 1
+    if(ans[int(c1)-1] == "Sectionalism"):
+        score += 1
+    if(ans[int(d1)-1] == "The Industrial Revolution"):
+        score += 1
+    if(ans[int(e1)-1] == "Era of the Common Man/Age of Jackson"):
+        score += 1
+    if(ans[int(f1)-1] == "Manifest Destiny"):
+        score += 1
+    if(ans[int(g1)-1] == "The Civil War"):
+        score += 1
+    if(ans[int(h1)-1] == "Reconstruction"):
+        score += 1
+    if(ans[int(i1)-1] == "The Gilded Age"):
+        score += 1
+    if(ans[int(j1)-1] == "The 2nd Industrial Revolution"):
+        score += 1
+    return str(score) + "/10, reload the page to reshuffle"
+
+checkAns("${A2.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${B2.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${C2.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${D2.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${E2.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${F2.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${G2.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${H2.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${I2.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${J2.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", ${JSON.stringify(ansChoices2)})
+`;
+          const result = await pyodide.runPythonAsync(code);
+          out.textContent = String(result);
+        } catch (e) {
+          out.textContent = "Error: " + e;
+        }
+      }
+
+      async function runScript3() {
+        const out = document.getElementById("out3");
+        out.textContent = "Running…";
+        try {
+          const pyodide = await pyodideReady;
+
+          // If you need pure-Python packages from PyPI (no native code), you can micropip-install like this:
+          // await pyodide.loadPackage("micropip");
+          // await pyodide.runPythonAsync(`
+          //   import micropip
+          //   await micropip.install("some-pure-python-package")
+          // `);
+
+          // Collect inputs (edit these IDs to match your UI)
+          
           const A3 = document.getElementById("A3").value.trim();
           const B3 = document.getElementById("B3").value.trim();
           const C3 = document.getElementById("C3").value.trim();
@@ -189,9 +242,9 @@ def checkAns(a1: str, b1: str, c1: str, d1: str, e1: str, f1: str, g1: str, h1: 
         score += 1
     if(ans[int(j1)-1] == "The 2nd Industrial Revolution"):
         score += 1
-    return str(score) + "/10, reload the page to redo"
+    return str(score) + "/10, reload the page to reshuffle"
 
-checkAns("${A2.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${B2.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${C2.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${D2.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${E2.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${F2.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${G2.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${H2.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${I2.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${J2.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", ${JSON.stringify(ansChoices)})
+checkAns("${A3.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${B3.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${C3.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${D3.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${E3.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${F3.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${G3.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${H3.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${I3.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${J2.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", ${JSON.stringify(ansChoices3)})
 `;
           const result = await pyodide.runPythonAsync(code);
           out.textContent = String(result);
@@ -199,7 +252,6 @@ checkAns("${A2.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${B2.replace(/\\/
           out.textContent = "Error: " + e;
         }
       }
-
       window.runScript = runScript;
       document.addEventListener("DOMContentLoaded", () => {
         renderChoices(ansChoices);   // writes into #choices
@@ -266,7 +318,7 @@ checkAns("${A2.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${B2.replace(/\\/
       <div id="out2" style="margin-top: .8rem;">Output will appear here…</div><br>
       <img src="timeline3.png" alt="first timeline" width="500"><br>
       <div id="choices3"></div>
-      <p> ver 4</p>
+      <p> ver 12390</p>
     </div>
   </body>
 </html>
