--- a/index.html
+++ b/index.html
@@ -270,6 +270,8 @@ checkAns("${A3.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${B3.replace(/\\/
                                 border: 1px solid rgba(0,0,0,.15); }
       button { cursor: pointer; }
       #out { white-space: pre-wrap; min-height: 2.5rem; }
+      #out2 { white-space: pre-wrap; min-height: 2.5rem; }
+      #out3 { white-space: pre-wrap; min-height: 2.5rem; }
       footer { margin-top: 2rem; opacity: .7; font-size: .9rem; }
       code { font-family: ui-monospace, SFMono-Regular, Menlo, Consolas, "Liberation Mono", monospace; }
     </style>
@@ -340,7 +342,7 @@ checkAns("${A3.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${B3.replace(/\\/
       <input id="J3" placeholder="1 to 10" /><br>
       <button onclick="runScript3()">Check Answer</button>
       <div id="out3" style="margin-top: .8rem;">Output will appear here…</div><br>
-      <p> ver 10</p>
+      <p> ver 1</p>
     </div>
   </body>
 </html>
