--- a/index.html
+++ b/index.html
@@ -253,6 +253,8 @@ checkAns("${A3.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${B3.replace(/\\/
         }
       }
       window.runScript = runScript;
+      window.runScript2 = runScript2;
+      window.runScript3 = runScript3;
       document.addEventListener("DOMContentLoaded", () => {
         renderChoices(ansChoices);   // writes into #choices
         renderChoices2(ansChoices2); // writes into #choices2
@@ -342,7 +344,7 @@ checkAns("${A3.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${B3.replace(/\\/
       <input id="J3" placeholder="1 to 10" /><br>
       <button onclick="runScript3()">Check Answer</button>
       <div id="out3" style="margin-top: .8rem;">Output will appear here…</div><br>
-      <p> ver 1123</p>
+      <p> ver 1</p>
     </div>
   </body>
 </html>
