--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@ checkAns("${A3.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${B3.replace(/\\/
       <input id="J3" placeholder="1 to 10" /><br>
       <button onclick="runScript3()">Check Answer</button>
       <div id="out3" style="margin-top: .8rem;">Output will appear here…</div><br>
-      <p> ver 1</p>
+      <p> ver 1121233</p>
     </div>
   </body>
 </html>
