--- a/index.html
+++ b/index.html
@@ -108,17 +108,33 @@ def checkAns(a1: str, b1: str, c1: str, d1: str, e1: str, ans) -> str:
     if(not (a1 and b1 and c1 and d1 and e1)):
         return "Please fill in all fields."
     score = 0
+    wrong = []
     if(ans[int(a1)-1] == "The coming of the Spanish"):
         score += 1
+    else:
+        wrong.append("A")
     if(ans[int(b1)-1] == "The coming of the French and English"):
         score += 1
+    else:
+        wrong.append("B")
     if(ans[int(c1)-1] == "The colonial period"):
         score += 1
+    else:
+        wrong.append("C")
     if(ans[int(d1)-1] == "The Revolutionary Era"):
         score += 1
+    else:
+        wrong.append("D")
     if(ans[int(e1)-1] == "The Critical Period: from Confederation to Constitution"):
         score += 1
-    return str(score) + "/5, reload the page to reshuffle"
+    else:
+        wrong.append("E")
+    ret = str(score) + "/5, reload the page to reshuffle"
+    if(len(wrong) != 0):
+        ret += "\nQuestions missed: "
+        for i in range(len(wrong)):
+            ret += wrong[i] + " "
+    return ret
 
 checkAns("${A1.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${B1.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${C1.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${D1.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${E1.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", ${JSON.stringify(ansChoices)})
 `;
@@ -344,7 +360,7 @@ checkAns("${A3.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${B3.replace(/\\/
       <input id="J3" placeholder="1 to 10" /><br>
       <button onclick="runScript3()">Check Answer</button>
       <div id="out3" style="margin-top: .8rem;">Output will appear here…</div><br>
-      <p> ver 1121233</p>
+      <p> ver 1</p>
     </div>
   </body>
 </html>
